$Id$

2017-01-13  Christian Franke  <franke@computer.org>

	configure.ac: Rework CXXFLAGS settings, use shell intrinsics.

	os_win32.cpp: Fix harmless buffer overflow bug
	(found by VC14 code analyser).

2017-01-12  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Innodisk 1ME3/3ME/3SE SSDs: Rename, add 1ME3 (ticket #713), 3SE
	- Innodisk 3IE2/3ME2/3MG2/3SE2 SSDs: Rename, add 3ME2
	- Samsung based SSDs: 750 EVO, PM810(470), 840, PM830, PM851,
	  CM871 (ticket #754), CM871a, PM871a (tickets #745, #775),
	  SM951 (ticket #704)

2017-01-11  Christian Franke  <franke@computer.org>

	smartctl.8.in: Make '-d intelliprop' visible on all platforms.
	Add warning.
	smartd.conf.5.in: Document '-d intelliprop'.

	os_win32/vc14/smart*.vcxproj*: Add new files.

	AUTHORS: Add Casey Biemiller

2017-01-11  Casey Biemiller  <cbiemiller@intelliprop.com>

	Add '-d intelliprop' device type for drives behind IntelliProp
	RAID controllers (ticket #730):
	atacmds.cpp, atacmds.h: Add function ataWriteLogExt().
	dev_intelliprop.cpp, dev_intelliprop.h: New files.
	dev_interface.cpp: Add '-d intelliprop,N[+TYPE]' option.
	Makefile.am: Add new files.
	smartctl.8.in, smartd.conf.5.in: Document it.

2017-01-09  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: fix panic on INVARIANTS enabled kernel, patch
	provided (#780) by Oliver Pinter <oliver.pinter@hardenedbsd.org>

2017-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2016-11-12  Christian Franke  <franke@computer.org>

	atacmds.h, freebsd_nvme_ioctl.h: Apply patch-atacmds.h 1.1
	and patch-freebsd_nvme_ioctl.h 1.1 (2016-11-04) from
	pkgsrc.se/sysutils/smartmontools:
	Build fix for FreeBSD-11 and newer.  Don't redefine now
	existing things, ATA_SET_FEATURES and nvme_command.

2016-11-10  Christian Franke  <franke@computer.org>

	os_linux.cpp: Don't detect devices behind hpsa driver as regular
	SCSI devices.  Suggest to use '-d cciss,N' instead.
