@@ -1,5 +1,10 @@
 $Id$
 
+2017-01-14  Christian Franke  <franke@computer.org>
+
+	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
+	Add STATUS parameter to '-n POWERMODE' option (ticket #697).
+
 2017-01-13  Christian Franke  <franke@computer.org>
 
 	configure.ac: Rework CXXFLAGS settings, use shell intrinsics.
